Diff Highlight has to do its job before CC

--- a/components.json
+++ b/components.json
@@ -1120,7 +1120,8 @@
 			"title": "Custom Class",
 			"description": "This plugin allows you to prefix Prism's default classes (<code>.comment</code> can become <code>.namespace--comment</code>) or replace them with your defined ones (like <code>.editor__comment</code>). You can even add new classes.",
 			"owner": "dvkndn",
-			"noCSS": true
+			"noCSS": true,
+			"optional": "diff-highlight"
 		},
 		"file-highlight": {
 			"title": "File Highlight",
